# hermatic_python_bazel_experiment

./: README.md  WORKSPACE.bazel
hello/: main.py
