workspace(name = "bazel_py_experiment")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

######################
# PYTHON SUPPORT
######################
rules_python_version = "0.7.0"

http_archive(
    name = "rules_python",
    sha256 = "15f84594af9da06750ceb878abbf129241421e3abbd6e36893041188db67f2fb",
    strip_prefix = "rules_python-0.7.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.7.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "my_py3",
    # Available versions are listed in @rules_python//python:versions.bzl.
    python_version = "3.10",
)

load("@my_py3_resolved_interpreter//:defs.bzl", python_interpreter = "interpreter")

load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "py_deps",
    python_interpreter_target = python_interpreter,
    requirements = "//3rdparty:requirements.txt",
)

